--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.21.1",
     "nuxt": "^3.10.0",
     "pinia": "^2.1.7",
     "prettier": "^3.2.5",
+    "sass": "^1.70.0",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
