--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "stylelint-scss": "^6.1.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/image": "^1.3.0"
   }
 }
